<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.brand.Kratos.customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="63.7dp"
            android:text="@string/select_your_fav"
            android:textColor="@color/black"
            android:textSize="16.7sp"
            android:textStyle="bold" />

        <com.brand.Kratos.customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/genres"
            android:textColor="@color/black"
            android:textSize="16.7sp"
            android:textStyle="bold" />

        <com.brand.Kratos.customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="10.4dp"
            android:text="@string/you_can"
            android:textColor="@color/light_weight_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vericaltlinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="61dp"
        android:gravity="center"
        android:orientation="vertical">

    </LinearLayout>


</RelativeLayout>
</ScrollView>

    <com.brand.Kratos.customfonts.MyTextView_Roboto_Medium
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/rectangle_button_yellow"
    android:gravity="end"
    android:paddingBottom="18.3dp"
    android:paddingEnd="25dp"
    android:paddingTop="18dp" android:layout_marginTop="20dp"
    android:id="@+id/next_id"
    android:text="@string/next"
    android:textColor="@color/white"
    android:textSize="14sp"
    android:textStyle="bold" />
    </RelativeLayout>