<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:background="@color/white"
    android:layout_height="match_parent">


    <!--Using #rd Party library for the switch in layout,
    checkout the gradle(app) for the library-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/music_back"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        tools:context=".SettingsFrag">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/shadow_down" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11.9dp"
            android:layout_marginEnd="11.3dp"
            android:layout_marginStart="11.7dp"
            android:layout_marginTop="10dp"
            android:elevation="3dp"
            tools:ignore="RtlCompat">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="15.8dp"
                        android:paddingStart="15.3dp"
                        android:paddingTop="16.4dp"
                        android:text="@string/user_info"
                        android:textColor="@color/pop_text_gray"
                        android:textSize="10sp" />

                    <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="15.2dp"
                        android:text="@string/edit"
                        android:visibility="gone"
                        android:textColor="@color/pop_text_gray"
                        android:textSize="11.7sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/view_gray" />

                <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15.2dp"
                    android:paddingStart="15.3dp"
                    android:paddingTop="15.2dp"
                    android:text="@string/jay"
                    android:id="@+id/user_name"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/view_gray" />

                <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15.2dp"
                    android:paddingStart="15.3dp"
                    android:id="@+id/email_id"
                    android:paddingTop="15.2dp"
                    android:text="@string/jayws"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11.9dp"
            android:layout_marginEnd="11.3dp"
            android:layout_marginStart="11.7dp"
            android:elevation="3dp"
            tools:ignore="RtlCompat">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15.8dp"
                    android:paddingStart="15.3dp"
                    android:paddingTop="16.4dp"
                    android:text="@string/playback"
                    android:textColor="@color/pop_text_gray"
                    android:textSize="10sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/view_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check_tags"
                    android:orientation="horizontal">

                    <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="15.2dp"
                        android:id="@+id/tags_id"
                        android:paddingStart="15.3dp"
                        android:paddingTop="15.2dp"
                        android:text="@string/audio"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="7.6dp"
                        android:text="@string/_320kb"
                        android:visibility="gone"
                        android:textColor="@color/black"
                        android:textSize="13.3sp" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:layout_marginEnd="13.8dp"
                        android:src="@drawable/ic_forward_gray" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/view_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="15.2dp"
                        android:paddingStart="15.3dp"
                        android:paddingTop="15.2dp"
                        android:visibility="gone"
                        android:text="@string/equalizer"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="7.6dp"
                        android:text="@string/classical"
                        android:textColor="@color/black"
                        android:textSize="13.3sp" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="13.8dp"
                        android:src="@drawable/ic_forward_gray" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:visibility="gone"
                    android:background="@color/view_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="15.2dp"
                        android:paddingStart="15.3dp"
                        android:paddingTop="15.2dp"
                        android:text="Auto Play Videos"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.suke.widget.SwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="13.5dp"
                        app:sb_checked="true"
                        app:sb_checked_color="@color/switch_green"
                        app:sb_checkline_color="@color/switch_green"
                        app:sb_checkline_width="0dp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11.9dp"
            android:layout_marginEnd="11.3dp"
            android:layout_marginStart="11.7dp"
            android:elevation="3dp"
            tools:ignore="RtlCompat">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15.8dp"
                    android:paddingStart="15.3dp"
                    android:paddingTop="16.4dp"
                    android:text="@string/connect_to"
                    android:textColor="@color/pop_text_gray"
                    android:textSize="10sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/view_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="15.2dp"
                        android:paddingStart="15.3dp"
                        android:paddingTop="15.2dp"
                        android:text="@string/fb"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.suke.widget.SwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="13.5dp"
                        app:sb_checked="true"
                        app:sb_checked_color="@color/switch_green"
                        app:sb_checkline_color="@color/switch_green"
                        app:sb_checkline_width="0dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/view_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="15.2dp"
                        android:paddingStart="15.3dp"
                        android:paddingTop="15.2dp"
                        android:text="@string/twitter"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.suke.widget.SwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="13.5dp"
                        app:sb_checked="true"
                        app:sb_checked_color="@color/switch_green"
                        app:sb_checkline_color="@color/switch_green"
                        app:sb_checkline_width="0dp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11.9dp"
            android:layout_marginEnd="11.3dp"
            android:id="@+id/logout_id"
            android:layout_marginStart="11.7dp"
            android:elevation="3dp"
            tools:ignore="RtlCompat">

            <com.brand.Kratos.customfonts.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15.2dp"
                android:paddingStart="15.3dp"
                android:paddingTop="15.2dp"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>